Release eumw-3.4.0